# finn_car_search

./: README.md  pyproject.toml  requirements.txt
data/: ads.parquet
notebooks/: identify_paterns.ipynb
src/: app.py  config.toml  crawler.py  scraper.py
